reviews mention cdgv about text

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -48,6 +48,174 @@ views:
                 +33 3 20 96 05 59<br />
                 feel-lighting.fr<br />
                 Fabricant de luminaires<br />
+        mention:
+            title: "Mentions légales"
+            subheading1: "Feel l'expert du lighting"
+            paragraph1: >
+                En accédant et en utilisant le site de la société Feel Lighting, maintenant et à n’importe quel moment dans le futur,
+                vous acceptez les conditions suivantes :<br />bien que nous ayons pris soin d’assurer l’exactitude des informations qui se trouvent sur le site de la société Feel Lighting,
+                l’information sur ce site est fournie sans représentation ou garantie.<br />En aucun cas la société Feel Lighting ne sera responsable à propos de l’utilisation des informations disponibles,
+                sauf indication contraire.<br />La société Feel Lighting ne garantit pas que les sites ou les serveurs qui mettent à disposition ce site sont dépourvus de tout virus ou de tout autre élément
+                nuisible. La société Feel Lighting se réserve le droit de modifier ou de mettre à jour les informations mises à votre disposition sur le site à n’importe quel moment sans avis préalable.<br />
+                Les informations fournies sur le site peuvent uniquement être utilisées, copiées ou distribuées sans être modifiées dans un but d’information personnel et doivent stipuler la mention copyright
+                Feel Lighting. Le copyright du site et de son contenu demeure la propriété de la société Feel Lighting. Tous droits de reproduction réservés.
+        termsandconditions:
+            title: "Conditions générales de vente"
+            subheading1: "GÉNÉRALITÉS"
+            paragraph1: >
+                Le contrat est soumis à la loi française.<br />
+                L’acceptation de notre offre implique votre adhésion totale aux
+                présentes conditions. Toutefois certaines modifications peuvent y
+                être apportées.<br />
+                Ces modifications devront être précisées clairement par nos
+                soins, soit dans les conditions particulières ci-après, soit dans
+                l’accusé de réception de commande.
+            subheading2: "DEVIS – OFFRE"
+            paragraph2: >
+                Tout devis ou offre n’engage FEEL que pour la période de validité
+                indiquée. En l’absence de toute indication de durée, l’offre sera
+                valable durant un mois à compter de la date d’émission.
+            subheading3: "ANNULATION"
+            paragraph3: >
+                Aucune commande ne pourra être annulée ou retournée sans
+                l’accord écrit de la société. Quel que soit le motif du retour, un
+                abattement de 30% sera déduit de l’avoir adressé au client, ceci
+                pour couvrir les frais de reconditionnement et de remise en
+                conformité.
+            subheading4: "LIVRAISON – MODIFICATION DES DÉLAIS"
+            paragraph4: >
+                Les délais de livraison s’entendent à réception la plus tardive des
+                dates suivantes : celle des matières fournies par le client, celle du
+                prototype, celle des indications ou plan de montage, celle de
+                l’accusé de réception du bon de commande. Dans la mesure où
+                l’exécution de nos produits dépends d’éléments extérieurs, les
+                délais portés sur nos offres et devis ne sont donnés qu’à titre
+                indicatif et sans garantie, et ne peuvent entraîner aucune
+                retenue, compensation ou pénalité de retard.
+                En outre, ces délais seront prolongés : si les indications qui nous
+                sont nécessaire pour l’exécution de la commande ne nous sont
+                pas données en temps utile, par des retards de nos principaux
+                fournisseurs, et de manière générale pour tous cas de force
+                majeure (guerre, incendie, grèves, ...).
+                Dans le cas où FEEL assure le transport, la marchandise est
+                réputée de plein droit avoir été livrée en bon état à défaut de
+                réclamations détaillées sur le bon de livraison.
+                Il appartient au client de vérifier les marchandises dès leur
+                réception et de procéder en cas de vice apparent, avarie ou
+                manquant au constat par écrit sur le bon de livraison des réserves
+                émises.
+                Les marchandises voyagent aux risques et périls du client, quel
+                que soient le mode de transport ou les modalités de règlement
+                du transport (FEEL, Client ou Tiers Transporteur).
+            subheading5: "GARANTIES"
+            paragraph5: >
+                A l’égard de l’Acquéreur, nous assurons la responsabilité
+                afférente aux produits livrés, conformément à la réglementation
+                en vigueur, et garantissons, en conséquence, celui-ci contre toute
+                réclamation ou revendication, judiciaire ou amiable, résultant tant
+                des dommages causés aux biens que des dommages causés aux
+                personnes, du fait desdits produits.
+                Cependant, le total des indemnités ne pourra, de convention
+                expresse, dépasser le prix des produits à l’origine du dommage.
+                Le Fournisseur ne garantit l’Acquéreur, au titre des vices cachés
+                pouvant affectés les produits livrés, que dans le cadre d’un
+                remplacement des produits défectueux, ou des pièces les rendant
+                impropre à l’usage, sans pouvoir être considéré par l’Acquéreur
+                comme responsable des éventuelles conséquences
+                dommageables que ces vices cachés auraient pu entraîner.
+                A cet égard, afin de faire valoir ses droits, l’Acquéreur devra, sous
+                peine de déchéance de toute action s’y rapportant, informer notre
+                société, par écrit, de l’existence des vices dans un délai maximum
+                de 5 (cinq) jours à compter de leur découverte.
+                Nous garantissons en outre l’Acquéreur, et ce sauf erreur de
+                manipulation de sa part, le bon fonctionnement des produits et
+                matériel vendus pendant un délai de 3 mois à compter de la
+                livraison et de la réception par celui-ci desdits produits et
+                matériels.
+            subheading6: "PRIX"
+            paragraph6: >
+                Nos prix s’entendent (sauf contrat) hors taxes, départ de nos
+                magasins, emballage non inclus.
+                Pour les fournitures additionnelles à une commande principale,
+                les prix et nouveaux délais seront discutés spécialement entre
+                FEEL et le Client.
+            subheading7: "CONDITIONS DE PAIEMENT"
+            paragraph7: >
+                A défaut de clauses particulières, nos factures sont payables sans
+                escompte à échéance de 30 jours fin de mois le 10. Tout délai de
+                paiement accordé doit faire l’objet d’une convention écrite.
+                Le retard de paiement produit de plein droit et sans mise en
+                demeure (art. 53 de la loi 2001-420 du 15/05/01) l’application
+                d’une indemnité de 15% de clause pénale en sus de l’application
+                d’intérêt de retard selon un taux calculé à 1,5 fois le taux d’intérêt
+                légal ainsi que la déchéance du terme de toutes autres factures
+                qui pourraient exister entre FEEL et le Client.
+                Le non-paiement à l’échéance donne de plein droit à FEEL la
+                suspension de toute autre production en cours destinée au client.
+                Si lors d’une commande précédente, le Client s’est soustrait à
+                l’une de ses obligations (retard de paiement...), un refus pourra lui
+                être opposé, sauf si le Client montre des garanties suffisantes ou
+                un prépaiement. Dans ce cas, aucune ristourne pour paiement
+                comptant ou anticipé ne lui sera accordée.
+                Toute réclamation concernant nos factures doit être portée à
+                notre connaissance par lettre recommandée dans le mois qui suit
+                leur réception. A défaut, elles seront considérées comme
+                acceptées sans aucune réserve.
+            subheading8: "RÉSERVE DE PROPRIÉTÉ"
+            paragraph8: >
+                FEEL conserve la propriété des marchandises vendues jusqu’au
+                paiement effectif de l’intégralité du prix en principal et accessoire.
+                Le défaut de paiement peut entraîner la revendication des
+                marchandises concernées.
+                Ces dispositions ne font pas obstacles au transfert à l’acheteur,
+                dès la livraison ou la remise au transporteur, des risques de perte
+                et de détérioration des biens vendus ainsi que des dommages
+                qu’ils pourraient occasionner. Il appartient au client d’assurer les
+                marchandises livrées et non payées.
+            subheading9: "COMPÉTENCE JURIDICTIONNELLE"
+            paragraph9: >
+                Tout litige relatif à l’interprétation, l’exécution ou la rupture
+                découlant des opérations d’achat et de ventes, visées par les
+                présentes conditions générales de vente seront de la compétence
+                exclusive du tribunal de commerce de Lille.
+        about:
+            title: "Qui sommes nous ?"
+            subheading1: "Présentation"
+            paragraph1: >
+                La société FEEL, anciennement FEEL-LIBRA a été créé le 1er Avril 2002 par Mr Alexandre RICHARD, à
+                ENNEVELIN dans le NORD (59).<br />Le statut de la société à l’époque était une S.A.R.L (Société Anonyme
+                à Responsabilité Limitée), et comportait deux activités très distinctes à savoir, fabrication de balance
+                Roberval (suite à reprise de l’outil TESTUT) et une activité de sous-traitance en câblage filaire et
+                fabrication de petites cartes électroniques. En Septembre 2004, FEEL-LIBRA effectue sa première
+                implication en électronique complexe avec la réalisation du « Cercle de Buren » pour Lille 2004 du
+                nom de l’architecte.<br />
+                En Août 2005, la société cède son activité Balance à la Société SWIEBEL, leader Européen de la
+                fabrication de poids et d’étalons. Elle déménage à ATTICHES pour disposer de locaux plus appropriés.
+                FEEL-LIBRA devient FEEL.<br />En Décembre 2007, FEEL exécute sa première réalisation électronique à
+                base de LED de puissance pour des projecteurs de scène.<br />En Mai 2009, nouveau déménagement dans
+                les locaux actuels toujours en vue de disposer de la surface et de bureaux plus appropriés pour
+                l’ensemble du personnel.<br />A compter de juillet 2009, création d’une gamme de dispositifs d’éclairage
+                « FEEL » made in France – Création d’un département ReeFeel Dédié à l’éclairage récifal et
+                accessoires pour aquariums.<br />Depuis septembre 2009 multiplication des développements grâce au
+                recrutement de personnels qualifiés installés comme auto entrepreneur ou travaillant en temps
+                partagé et / ou embauche d’ouvriers qualifiés.<br />
+                En Août 2011, la société FEEL passe en SAS (société par action simplifiée) avec 64 000€ au capital
+                social.<br />En janvier 2013, FEEL augmente à nouveau son capital social par incorporation de réserve
+                pour atteindre 112 710€
+            subheading2: "Nos produits"
+            paragraph2: >
+                Depuis 2009, la société FEEL, s’est spécialisé dans l’éclairage à base de LED, et solutions de câblages
+                pour les professionnels.
+                Aujourd’hui elle propose une large gamme de produits de Projecteurs LED, et Tubes LED. Tous plus
+                respectueux de l’environnement. En effet l’utilisation d’éclairage permet de diviser par trois la
+                production de CO2 et de diminuer considérablement sa consommation d’énergie.
+            subheading3: "Nos clients"
+            paragraph3: >
+                La plus part des clients, sont des entreprises spécialisées dans l’électronique, comme JLP et MADEP.<br />
+                <a target="_blank" href="http://www.centaure-systems.fr" >Centaure Systems</a>, plus gros clients de la région, lui est spécialisé dans la communication à partir de
+                panneaux électriques.<br />
+                RAGNI, plus gros clients de la société (25% du CA), est lui le leader en France de l’éclairage publique.
+                FEEL-SAS vient les fournir en câbles qui permettent d’alimenter leurs luminaires.
     HWIOAuthBundle:
         connect:
             login:
