--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -181,14 +181,16 @@ views:
         about:
             title: "Qui sommes nous ?"
             subheading1: "Présentation"
-            paragraph1: >
+            paragraph1-1: >
                 La société FEEL, anciennement FEEL-LIBRA a été créé le 1er Avril 2002 par Mr Alexandre RICHARD, à
                 ENNEVELIN dans le NORD (59).<br />Le statut de la société à l’époque était une S.A.R.L (Société Anonyme
                 à Responsabilité Limitée), et comportait deux activités très distinctes à savoir, fabrication de balance
                 Roberval (suite à reprise de l’outil TESTUT) et une activité de sous-traitance en câblage filaire et
-                fabrication de petites cartes électroniques. En Septembre 2004, FEEL-LIBRA effectue sa première
+                fabrication de petites cartes électroniques.<br />
+                En Septembre 2004, FEEL-LIBRA effectue sa première
                 implication en électronique complexe avec la réalisation du « Cercle de Buren » pour Lille 2004 du
                 nom de l’architecte.<br />
+            paragraph1-2: >
                 En Août 2005, la société cède son activité Balance à la Société SWIEBEL, leader Européen de la
                 fabrication de poids et d’étalons. Elle déménage à ATTICHES pour disposer de locaux plus appropriés.
                 FEEL-LIBRA devient FEEL.<br />En Décembre 2007, FEEL exécute sa première réalisation électronique à
@@ -203,12 +205,13 @@ views:
                 social.<br />En janvier 2013, FEEL augmente à nouveau son capital social par incorporation de réserve
                 pour atteindre 112 710€
             subheading2: "Nos produits"
-            paragraph2: >
+            paragraph2-1: >
                 Depuis 2009, la société FEEL, s’est spécialisé dans l’éclairage à base de LED, et solutions de câblages
                 pour les professionnels.
                 Aujourd’hui elle propose une large gamme de produits de Projecteurs LED, et Tubes LED. Tous plus
                 respectueux de l’environnement. En effet l’utilisation d’éclairage permet de diviser par trois la
                 production de CO2 et de diminuer considérablement sa consommation d’énergie.<br />
+            paragraph2-2: >
                 <strong>Créativité et Innovation</strong><br />
                 FEEL travaille actuellement au développement d’un détecteur crépusculaire, qui varie la lumière
                 émise en fonction de l’obscurité de l’environnement.
