Modifications br dans about

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -198,16 +198,16 @@ views:
                 Première réalisation significative avec la réalisation du « Cercle de Buren » pour Lille 2004, du nom de l’architecte.<br />
             paragraph1-2: >
                 <strong>Décembre 2007</strong><br />
-                Conception du premier projecteur à LED de scène (PAR36).<br />
+                Conception du premier projecteur à LED de scène (PAR36).<br /><br />
                 <strong>Mai 2009</strong><br />
-                Arrivée dans ses locaux.<br />
+                Arrivée dans ses locaux.<br /><br />
                 <strong>Juillet 2009</strong><br />
-                Création d’une gamme de dispositifs d’éclairage « Feel » fabriqués en France et d’un département ReeFeel dédié à l’éclairage récifal pour aquariums.<br />
+                Création d’une gamme de dispositifs d’éclairage « Feel » fabriqués en France et d’un département ReeFeel dédié à l’éclairage récifal pour aquariums.<br /><br />
                 <strong>Août 2011</strong><br />
-                La société Feel évolue et change son statut en SAS (société par action simplifiée).<br />
+                La société Feel évolue et change son statut en SAS (société par action simplifiée).<br /><br />
                 <strong>Janvier 2013</strong><br />
                 Augmentation du capital social par incorporation de réserve pour atteindre 112 710€.<br />
-                Création des premières applications des éclairages à LED secteur (DDR).<br />
+                Création des premières applications des éclairages à LED secteur (DDR).<br /><br />
                 <strong>Janvier 2015</strong><br />
                 Déploiement de l’effectif du bureau d’études.<br />
             subheading2: "Nos produits"
