--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -187,6 +187,7 @@ views:
                 exclusive du tribunal de commerce de Lille.
         about:
             title: "Qui sommes nous ?"
+            Delphine: "100, Quai du Sartel 59100 Roubaix"
             subheading1: "Historique"
             paragraph1-1: >
                 <strong>1er avril 2002</strong><br />
