--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -218,7 +218,7 @@ views:
                 Feel est également très souvent sollicitée pour aménager des produits existants ou développer des produits spécifiques sur cahier des charges clients.<br />
                 L’association de solutions solaires, éolienne, domotique, communication RF nous permet de répondre aux exigences techniques des clients aux conditions économiques définies à l’origine du projet.<br />
                 L’étude et la réalisation de nos produits fabriqués en France sont réalisées selon des critères de qualité internes similaires à la norme ISO 9001 v2000.<br />
-            subheading3: "L'équipe FEEL LIGHTING"
+            subheading3: "L'équipe Feel Lighting"
             paragraph3: >
                 Direction commerciale : M. Alexandre Richard – arichard.feel@orange.fr<br />
                 Administration : M. Julien Finez – jfinez.feel@orange.fr<br />
@@ -229,6 +229,15 @@ views:
             subheading4: "Nos partenaires"
         galery:
             title: "Galerie"
+			item1: "Unoky"
+			item2: "La Défense - Candélabre 4 temps"
+			item3: "MAJE - Caisson"
+			item4: "AIER-EASY"
+			item5: "Colonne-RGB"
+			item6: "IR000071"
+			item7: "Lustre-3PAR56"
+			item8: "Oeuf"
+			item9 : "Tequila-Tezon"
         toolsconversion:
             title: "Conversion"
     HWIOAuthBundle:
